--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Nunito;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+}
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.add-task-input {
+  width: 300px;
+  padding: 8px;
+
+  margin-right: 20px;
+  border-radius: 12px;
+  box-shadow: 2px 2px 5px #4f4f4f;
+  transition: all 0.15s ease;
+  font-size: 21px;
+  font-family: inherit;
+  border: 1px solid #bdbdbd;
+}
+.add-task-input:focus {
+  border: 2px solid #bdbdbd;
+  outline: none;
+  width: 370px;
+}
+.wrapper-tasks {
+  display: flex;
+  justify-content: center;
+}
+
+.done {
+  text-decoration: line-through;
+}
+.tasks {
+}
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+  padding: 6px 8px;
+  margin-bottom: 20px;
+  border: 1px solid #bdbdbd;
+  border-radius: 12px;
+  box-shadow: 2px 2px 5px #4f4f4f;
+  cursor: pointer;
+}
+.btn {
+  padding: 1px 1px;
+
+  font-family: inherit;
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+}
+.add {
+  position: absolute;
+  color: #474747;
+  padding: 9px;
+  box-shadow: 1px 2px 5px #4f4f4f;
+  border-radius: 12px;
+  border: 0px;
+  background: linear-gradient(to top, #d0d0d0, #dcdcdc);
+  font-size: 20px;
+  cursor: pointer;
+}
+.add:hover {
+  background: #949494;
+}
+.add:active {
+  transform: translateX(1px);
+  transform: translatey(1px);
+}
+.remove {
+  cursor: pointer;
+}
+.text {
+  width: 100%;
 }
