--- a/src/index.css
+++ b/src/index.css
@@ -1,111 +1,141 @@
 body {
-  margin: 0;
-  font-family: Nunito;
+	margin: 0;
+	font-family: Nunito;
 }
 
 h1 {
-  text-align: center;
+	text-align: center;
 }
+
+h2 {
+	font-size: small;
+	color: #bdbdbd;
+	line-height: 1.6;
+	font-weight: 600;
+}
+
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 24px;
 }
 .content {
-  padding: 20px;
+	padding: 20px;
+}
+
+.guide {
+	max-width: 450px;
+	margin: 0 auto;
 }
 .add-task-input {
-  width: 300px;
-  padding: 8px;
+	width: 300px;
+	padding: 8px;
 
-  margin-right: 20px;
-  border-radius: 12px;
-  box-shadow: 2px 2px 5px #4f4f4f;
-  transition: all 0.15s ease;
-  font-size: 21px;
-  font-family: inherit;
-  border: 1px solid #bdbdbd;
+	margin-right: 20px;
+	border-radius: 12px;
+	transition: all 0.15s ease;
+	font-size: 21px;
+	font-family: inherit;
+	border: 1px solid #bdbdbd;
 }
 .add-task-input:focus {
-  border: 2px solid #bdbdbd;
-  outline: none;
-  width: 370px;
+	border: 2px solid #bdbdbd;
+	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	outline: none;
+	width: 370px;
 }
 .wrapper-tasks {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .done {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
 .tasks {
 }
 .task {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 350px;
-  padding: 6px 8px;
-  margin-bottom: 20px;
-  border: 1px solid #bdbdbd;
-  border-radius: 12px;
-  box-shadow: 2px 2px 5px #4f4f4f;
-  cursor: pointer;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 350px;
+	padding: 6px 8px;
+	margin-bottom: 20px;
+	border: 1px solid #bdbdbd;
+	border-radius: 12px;
+	cursor: pointer;
 }
-.btn {
-  padding: 1px 1px;
 
-  font-family: inherit;
-  background-color: transparent;
-  border: none;
-  font-size: 18px;
+.task:hover {
+	background: #f0f0f0;
+	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
+
+.btn {
+	padding: 1px 1px;
+
+	font-family: inherit;
+	background-color: transparent;
+	border: none;
+	font-size: 18px;
+}
+
 .add {
-  color: #474747;
-  padding: 9px;
-  box-shadow: 1px 2px 5px #4f4f4f;
-  border-radius: 12px;
-  border: 0px;
-  background: linear-gradient(to top, #d0d0d0, #dcdcdc);
-  font-size: 20px;
-  cursor: pointer;
+	color: #474747;
+	padding: 9px;
+	border-radius: 12px;
+	border: 0px;
+	background: linear-gradient(to top, #e2e2e2, #dcdcdc);
+	font-size: 20px;
+	cursor: pointer;
 }
 
 .add:hover {
-  background: #949494;
+	background: #d0d0d0;
+	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 .add:active {
-  transform: translateX(1px);
-  transform: translatey(1px);
+	transform: scale(0.99);
 }
 .remove {
-  cursor: pointer;
+	cursor: pointer;
 }
+
+.remove:active {
+	transform: scale(0.9);
+}
+
 .text {
-  width: 100%;
+	width: 100%;
 }
+
 @media (max-width: 624px) {
-  .add {
-    position: flex;
-    padding: 15px;
-  }
-  .add-input-wrapper {
-    display: flex;
-    flex-direction: column;
-    font-size: 22px;
-  }
-  .add-task-input {
-    margin-bottom: 15px;
-    margin-right: 0;
-    padding: 15px 10px;
-    font-size: 22px;
-  }
-  .task {
-    width: 320px;
-    max-width: 100%;
-    padding: 10px;
-    font-size: 24px;
-  }
+	.add {
+		position: flex;
+		padding: 15px;
+	}
+	.add-input-wrapper {
+		display: flex;
+		flex-direction: column;
+		font-size: 22px;
+	}
+	.add-task-input {
+		margin-bottom: 15px;
+		margin-right: 0;
+		padding: 15px 10px;
+		font-size: 22px;
+	}
+	.task {
+		width: 320px;
+		max-width: 100%;
+		padding: 10px;
+		font-size: 24px;
+	}
 }
