--- a/src/index.css
+++ b/src/index.css
@@ -10,18 +10,47 @@
 	box-sizing: border-box;
 }
 
+/* Темная тема */
+html[data-theme="dark"] {
+	--button-text-color: white;
+	--button-background-color: #353535;
+
+	--background-color-hover: #1f1f1f;
+
+	--main-text-color: white;
+	--text-color: #bdbdbd;
+
+	--background-color: #0f0f0f;
+}
+/* Светлая тема */
+html[data-theme="light"] {
+	--button-text-color: #474747;
+	--button-background-color: #e2e2e2;
+
+	--background-color-hover: #d3d3d3;
+
+	--main-text-color: black;
+	--text-color: #bdbdbd;
+
+	--background-color: white;
+}
+
 body {
 	margin: 0;
-	font-family: Nunito;
+	font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	background-color: var(--background-color);
+	transition: background-color 200ms linear;
 }
 
 h1 {
 	text-align: center;
+	color: var(--main-text-color);
 }
 
 h2 {
 	font-size: small;
-	color: #bdbdbd;
+	color: var(--text-color);
 	line-height: 1.6;
 	font-weight: 600;
 }
@@ -53,6 +82,7 @@ main {
 	font-size: 21px;
 	font-family: inherit;
 	border: 1px solid #bdbdbd;
+	background: var(--background-color);
 }
 .add-task-input:focus {
 	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
@@ -91,7 +121,7 @@ main {
 }
 
 .task:hover {
-	background: #f0f0f0;
+	background: var(--background-color-hover);
 	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 	box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
@@ -106,19 +136,47 @@ main {
 	font-size: 18px;
 }
 
+.theme-toggle__groups {
+	display: flex;
+	margin: 0 auto 40px auto;
+	max-width: 500px;
+	justify-content: end;
+	align-items: center;
+}
+
+.theme-toggle {
+	width: 50px;
+	height: 50px;
+	background-color: var(--button-background-color);
+	border-radius: 12px;
+	color: var(--text-color);
+	transition: linear color 50ms linear;
+	transition: background-color 100ms linear;
+	font-size: 24px;
+}
+
+.theme-toggle:hover {
+	background-color: var(--background-color-hover);
+}
+
+.theme-toggle:active {
+	transform: scale(0.99);
+}
+
 .add {
 	width: 150px;
-	color: #474747;
 	padding: 10px;
 	border-radius: 12px;
-	background: linear-gradient(to top, #e2e2e2, #dcdcdc);
 	font-size: 20px;
 	cursor: pointer;
 	text-align: center;
+	color: var(--button-text-color);
+	background-color: var(--button-background-color);
+	transition: color 50ms linear, background-color 50ms linear;
 }
 
 .add:hover {
-	background: #d0d0d0;
+	background: var(--background-color-hover);
 	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
 	box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
@@ -135,7 +193,7 @@ main {
 }
 
 .text {
-	width: 100%;
+	color: var(--main-text-color);
 }
 
 .wrapper__info {
@@ -146,7 +204,6 @@ main {
 	margin-bottom: 30px;
 	border-radius: 12px;
 	padding: 5px;
-	background-color: white;
 }
 
 .wrapper__progressbar {
