--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ main {
 	font-family: inherit;
 	border: 1px solid #bdbdbd;
 	background: var(--background-color);
+	color: var(--text-color);
 }
 .add-task-input:focus {
 	-webkit-box-shadow: 3px 10px 20px 0px rgba(0, 0, 0, 0.1);
