--- a/src/index.css
+++ b/src/index.css
@@ -60,12 +60,18 @@ p {
 	color: #4b4b4b;
 }
 
-main {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 24px;
+select {
+	height: 50px;
+	font-weight: 500;
+	line-height: 1.6;
+	font-size: medium;
+	color: var(--text-color);
+	margin-right: 1rem;
+	border-radius: 12px;
+	background-color: var(--background-color);
+	border: 1px solid #bdbdbd;
 }
+
 .content {
 	padding: 40px 20px 40px 20px;
 }
@@ -92,16 +98,30 @@ main {
 	outline: none;
 	width: 300px;
 }
+
+.wrapper {
+	margin: 0 auto;
+	padding: 2rem;
+	min-height: 100%;
+}
+
 .wrapper-tasks {
 	display: flex;
 	justify-content: center;
 	max-width: 500px;
-	margin: 0 auto;
+	margin: 1rem auto 0 auto;
 }
 
 .wrapper__text {
 	margin: 0 auto;
 	max-width: 450px;
+}
+
+.wrapper__filters {
+	display: flex;
+	justify-content: space-between;
+	max-width: 500px;
+	margin: 1rem auto 0 auto;
 }
 
 .done {
@@ -198,6 +218,21 @@ main {
 	width: 100%;
 }
 
+.search-input {
+	padding: 10px;
+	width: 100%;
+	border-radius: 12px;
+	font-size: 21px;
+	font-family: inherit;
+	border: 1px solid #bdbdbd;
+	background: var(--background-color);
+	color: var(--text-color);
+}
+
+.search-input:focus {
+	outline: none;
+}
+
 .wrapper__info {
 	display: flex;
 	max-width: 500px;
@@ -216,6 +251,7 @@ main {
 
 .add-input-wrapper {
 	display: flex;
+	margin: 0 auto;
 	width: 500px;
 	justify-items: flex;
 	align-items: center;
